--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   <body>
     <div id="app">
       <div id="scene"></div>
+      <div id="ui">
+        <button id="start">Start</button>
+      </div>
     </div>
   </body>
 </html>
