--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,7 @@
   <body>
     <div id="app">
       <div id="scene"></div>
-      <div id="ui">
-        <button id="start">Start</button>
-      </div>
+      <div id="ui"></div>
     </div>
   </body>
 </html>
