--- a/src/index.html
+++ b/src/index.html
@@ -4,27 +4,73 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
     <title>Hello world !</title>
     <style>
-      html,
-      body {
-        background: #212121;
-      }
-      #ui {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: none;
+      html {
+        background-color: #212121;
       }
     </style>
   </head>
 
-  <body>
+  <body onload="document.body.style.visibility=`visible`;">
+    <script>
+      document.body.style.visibility = `hidden`;
+    </script>
     <div id="app">
-      <div id="scene"></div>
-      <div id="ui"></div>
+      <div id="nav">
+        <h1>Thing</h1>
+        <nav>
+          <ul>
+            <li><button class="nav-item" data-route="/">About</button></li>
+            <li>
+              <span class="heading">Gallery</span>
+              <ul>
+                <li>
+                  <button
+                    class="nav-item"
+                    data-route="/gallery/image-manipulation"
+                  >
+                    Gallery 1
+                  </button>
+                </li>
+                <li>
+                  <button class="nav-item" data-route="/gallery/2">
+                    Gallery 2
+                  </button>
+                </li>
+                <li>
+                  <button class="nav-item" data-route="/gallery/3">
+                    Gallery 3
+                  </button>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+
+        <svg
+          class="divider-line animated-line"
+          width="1"
+          height="100%"
+          preserveAspectRatio="none"
+        >
+          <line
+            x1="0"
+            y1="0"
+            x2="0"
+            y2="100%"
+            stroke="currentColor"
+            stroke-width="1"
+            vector-effect="non-scaling-stroke"
+            class="animated-line"
+          />
+        </svg>
+      </div>
+      <div id="main">
+        <div id="scene"></div>
+        <div id="ui"></div>
+      </div>
     </div>
   </body>
 </html>
