--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     </script>
     <div id="app">
       <div id="nav">
-        <h1>Thing</h1>
+        <h1 id="title">Thing</h1>
         <nav>
           <ul>
             <li><button class="nav-item" data-route="/">About</button></li>
@@ -70,6 +70,7 @@
       <div id="main">
         <div id="scene"></div>
         <div id="ui"></div>
+        <div id="loader"></div>
       </div>
     </div>
   </body>
