update: some updates to routing, active class, new emitted events, performance for template service, updates to css

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="/" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -29,7 +30,8 @@
                 <li>
                   <button
                     class="nav-item"
-                    data-route="/gallery/image-manipulation"
+                    data-route="/gallery/1"
+                    aria-label="Navigate to Gallery 1"
                   >
                     Gallery 1
                   </button>
